--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <title>Photo</title>
 </head>
 <body>
+    <header>
+        <a href="#">
+            <img src="https://via.placeholder.com/200/80" alt="Placeholder Photo" width="200" height="100">
+        </a>
 
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Nature</a></li>
+                <li><a href="index.html">Bulidings</a></li>
+                <li><a href="index.html">People</a></li>
+                <li><a href="index.html">Abstract</a></li>
+            </ul>
+
+        </nav>
+    </header>
 </body>
 </html>
